k8-workspace/ingress-gateway.yml
# ingress route based access
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/use-regix: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      -  www.emstum.com
      secretName: bottomhalf-services-tls
  rules:
  - host: www.emstum.com
    http:
      paths:
      - path: /bot/sb(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: apigateway-boot-service
            port:
              number: 8090
      - path: /bot/dn(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: apigateway-core-service
            port:
              number: 5001            

---

# ingress direct access use this for subdomain also
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway-direct
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    kubernetes.io/ingress.class: public
    ingress.kubernetes.io/use-regex: true
spec:
  tls:
    - hosts:
      -  www.cyberzonetec.com
      -  www.bottomhalf.in
      -  www.emstum.com
      -  www.voltmatehub.com
      secretName: bottomhalf-tls
  rules:
  - host: bot-db-server.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3308

  - host: www.voltmatehub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evtracker-service
            port:
              number: 8080              

  - host: www.emstum.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emstum-ui-service
            port:
              number: 8081                           

  - host: www.voltmatehub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracker-api-service
            port:
              number: 8080

  - host: www.cyberzonetec.com
  # - host: www.emstum.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skillbi-service
            port:
              number: 8201    

  - host: www.bottomhalf.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bottomhalf-service
            port:
              number: 8190  

  - host: www.wisdomreadinghall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisdon-library-ui-service
            port:
              number: 8193            
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wisdon-library-service
            port:
              number: 8192

  - host: www.aamnatailor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aamnaz-service
            port:
              number: 8191
